<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:orderInCategory="100"
        android:title="@string/calculator"
        app:showAsAction="never" />

    <item
        android:id="@+id/item2"
        android:orderInCategory="100"
        android:title="@string/app_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/item3"
        android:orderInCategory="100"
        android:title="@string/menu_3"
        app:showAsAction="never" />

    <item
        android:id="@+id/item4"
        android:orderInCategory="100"
        android:title="@string/back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item5"
        android:orderInCategory="100"
        android:title="@string/pick_activity"
        app:showAsAction="never" />

</menu>