<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/table_color"
    android:padding="5dp"
    android:stretchColumns="1,2,3">

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/billTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:textColor="@android:color/black"
            android:text="@string/Bill" />

        <EditText
            android:id="@+id/billEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="numberDecimal" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_column="1"
            android:text="@string/tip10" />

        <TextView
            android:id="@+id/fifteenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:text="@string/tip15" />

        <TextView
            android:id="@+id/twentyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/tip20" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:textColor="@android:color/black"
            android:text="@string/tip" />

        <EditText
            android:id="@+id/tip10EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:textSize="14sp"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/tip15EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:textSize="14sp"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/tip20EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:textSize="14sp"
            android:layout_weight="1"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:textColor="@android:color/black"
            android:text="@string/total" />

        <EditText
            android:id="@+id/total10EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:textSize="14sp"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/total15EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/total20EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/customTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:textColor="@android:color/black"
            android:text="@string/custom_percent" />

        <SeekBar
            android:id="@+id/customSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:progress="18"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp"
            android:focusable="false"
            android:layout_weight="2"
            android:layout_span="2"/>

        <TextView
            android:id="@+id/customTipTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:text="@string/tip18"
            android:layout_weight="1"
            android:textColor="@android:color/black" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:textColor="@android:color/black"
            android:text="@string/tip" />

        <EditText
            android:id="@+id/tipCustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:textSize="14sp"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:text="@string/total" />

        <EditText
            android:id="@+id/totalCustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:textSize="14sp"
            android:layout_weight="1"
            android:inputType="textPersonName" />

    </TableRow>
</TableLayout>